fixed text visibility

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,4 +24,12 @@
   .hideTouchInputChrome {
     -webkit-tap-highlight-color: transparent;
   }
+
+  .font-outline {
+    -webkit-text-stroke: 0.5px black;
+  }
+
+  .text-shadow {
+    text-shadow: 1px 1px 10px rgb(1, 23, 95, 1);
+  }
 }
